fix(maps): Improve button layout on mobile

--- a/src/data-browser/maps/MapsGraphs.css
+++ b/src/data-browser/maps/MapsGraphs.css
@@ -554,6 +554,11 @@ tr.highlight.colorBgWithBias .highlight { box-shadow: inset 0 0 100px rgba(255,2
     flex-direction: column;
     padding-top: 1em;
     padding-bottom: 1.5em;
-    align-items:initial;
+    align-items: center;
+    text-align: center;
+  }
+
+  .SelectWrapper .highlight-wrapper span { 
+    text-align: center;
   }
 }
